--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div id="top">
       <div id="logo">ZT</div>
-      <div id="logo-name"><u>Zoohandlung Tokic</u></div>
+      <div id="logo-name">Zoo-/Tierhandlung Tokic</div>
       <div id="navigation">
-        <a href="#">Angebote</a>
-        <a href="#">Über uns</a>
-        <a href="#">Service</a>
-        <a href="#">Kontakt</a>
+        <a href="#1">Angebote</a>
+        <a href="#2">Über uns</a>
+        <a href="#3">Service</a>
+        <a href="#4">Kontakt</a>
       </div>
       <div>
         <div id="image">
@@ -24,7 +24,7 @@
     <div id="main">
       <section id="about us">
         <h2><u>Über uns</u></h2>
-        <p> In der familiengeführten Zoohandlung "Zoohandlung TOKIC" finden sie seit 1935 alles für Ihre Tiere. Unsere Tiere werden seit knapp 100 Jahren von Ausgezeichneten Tierzüchten von uns aufgekauft.
+        <p> In der familiengeführten Zoohandlung "Zoohandlung Tokic" finden sie seit 1935 alles für Ihre Tiere. Unsere Tiere werden seit knapp 100 Jahren von Ausgezeichneten Tierzüchten von uns aufgekauft.
             
         </p>
         
